scode/geekling/prob3/error.txt
main.c: In function 'main':
main.c:6:13: warning: format '%s' expects argument of type 'char *', but argument 2 has type 'char **' [-Wformat=]
    6 | scanf("%1000s",s);}
      |        ~~~~~^  ~
      |             |  |
      |             |  char **
      |             char *
main.c:7:1: error: expected 'while' before 'for'
    7 | for (i=0;i<=1000;i++)
      | ^~~
main.c:7:21: error: expected ';' before ')' token
    7 | for (i=0;i<=1000;i++)
      |                     ^
      |                     ;
main.c:7:21: error: expected statement before ')' token
main.c:9:18: warning: comparison between pointer and integer
    9 |         if((*s[i]=="c")&&(*s[i++]=="h")&&(*s[i+=2]=="a")&&(*s[i+=3]=="k"))
      |                  ^~
main.c:9:34: warning: comparison between pointer and integer
    9 |         if((*s[i]=="c")&&(*s[i++]=="h")&&(*s[i+=2]=="a")&&(*s[i+=3]=="k"))
      |                                  ^~
main.c:9:51: warning: comparison between pointer and integer
    9 |         if((*s[i]=="c")&&(*s[i++]=="h")&&(*s[i+=2]=="a")&&(*s[i+=3]=="k"))
      |                                                   ^~
main.c:9:68: warning: comparison between pointer and integer
    9 |         if((*s[i]=="c")&&(*s[i++]=="h")&&(*s[i+=2]=="a")&&(*s[i+=3]=="k"))
      |                                                                    ^~
main.c:11:20: warning: assignment to 'char' from 'char *' makes integer from pointer without a cast [-Wint-conversion]
   11 |                 ch1="chak";
      |                    ^
main.c:14:20: warning: comparison between pointer and integer
   14 |         {if ((*s[j]=="c")&&(*s[j++]=="h")&&(*s[j+=2]=="o")&&(*s[j+=3]=="u")&&(*s[j+=4]=="k")&&(*s[j+=5]=="a"))
      |                    ^~
main.c:14:36: warning: comparison between pointer and integer
   14 |         {if ((*s[j]=="c")&&(*s[j++]=="h")&&(*s[j+=2]=="o")&&(*s[j+=3]=="u")&&(*s[j+=4]=="k")&&(*s[j+=5]=="a"))
      |                                    ^~
main.c:14:53: warning: comparison between pointer and integer
   14 |         {if ((*s[j]=="c")&&(*s[j++]=="h")&&(*s[j+=2]=="o")&&(*s[j+=3]=="u")&&(*s[j+=4]=="k")&&(*s[j+=5]=="a"))
      |                                                     ^~
main.c:14:70: warning: comparison between pointer and integer
   14 |         {if ((*s[j]=="c")&&(*s[j++]=="h")&&(*s[j+=2]=="o")&&(*s[j+=3]=="u")&&(*s[j+=4]=="k")&&(*s[j+=5]=="a"))
      |                                                                      ^~
main.c:14:87: warning: comparison between pointer and integer
   14 |         {if ((*s[j]=="c")&&(*s[j++]=="h")&&(*s[j+=2]=="o")&&(*s[j+=3]=="u")&&(*s[j+=4]=="k")&&(*s[j+=5]=="a"))
      |                                                                                       ^~
main.c:14:104: warning: comparison between pointer and integer
   14 |         {if ((*s[j]=="c")&&(*s[j++]=="h")&&(*s[j+=2]=="o")&&(*s[j+=3]=="u")&&(*s[j+=4]=="k")&&(*s[j+=5]=="a"))
      |                                                                                                        ^~
main.c:15:19: warning: assignment to 'char' from 'char *' makes integer from pointer without a cast [-Wint-conversion]
   15 |               {ch2="chouka";
      |                   ^
